@@ -1,3 +1,5 @@
+2014-12-12
+  * Predelani pluginu, na vyuzivani Stream API
 2014-10-31
   * Pridani zavislosti na simplejson 
 2014-10-24
